Enhance 404 page with helpful links; fix anchors rendering

--- a/404.html
+++ b/404.html
@@ -4,17 +4,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pagina niet gevonden (404)</title>
-  <link rel="canonical" href="https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/404.html" />
   <meta name="robots" content="noindex" />
   <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.tailwindcss.com" defer></script>
 </head>
 <body class="antialiased bg-gray-50">
   <main class="min-h-screen flex items-center justify-center p-6">
-    <div class="text-center">
-      <h1 class="text-5xl font-extrabold text-gray-900 mb-4">404</h1>
-      <p class="text-lg text-gray-600 mb-8">Deze pagina bestaat niet (meer).</p>
-      <a href="/huisverkopenzondermakelaarebook.nl/" class="bg-primary-600 hover:bg-primary-700 text-white px-6 py-3 rounded-lg font-semibold">Terug naar home</a>
+    <div class="text-center max-w-2xl">
+      <h1 class="text-5xl font-extrabold text-gray-900 mb-3">404</h1>
+      <p class="text-lg text-gray-600 mb-8">Deze pagina bestaat niet (meer). Gebruik de links hieronder om verder te gaan.</p>
+
+      <div class="grid sm:grid-cols-2 gap-3 mb-8">
+        <a href="/huisverkopenzondermakelaarebook.nl/" class="bg-primary-600 hover:bg-primary-700 text-white px-6 py-3 rounded-lg font-semibold">Terug naar home</a>
+        <a href="/huisverkopenzondermakelaarebook.nl/#voordelen" class="bg-white border border-gray-200 hover:border-gray-300 text-gray-800 px-6 py-3 rounded-lg font-semibold">Voordelen</a>
+        <a href="/huisverkopenzondermakelaarebook.nl/#proces" class="bg-white border border-gray-200 hover:border-gray-300 text-gray-800 px-6 py-3 rounded-lg font-semibold">Hoe Het Werkt</a>
+        <a href="/huisverkopenzondermakelaarebook.nl/#testimonials" class="bg-white border border-gray-200 hover:border-gray-300 text-gray-800 px-6 py-3 rounded-lg font-semibold">Ervaringen</a>
+        <a href="/huisverkopenzondermakelaarebook.nl/#faq" class="bg-white border border-gray-200 hover:border-gray-300 text-gray-800 px-6 py-3 rounded-lg font-semibold">FAQ</a>
+        <a href="https://www.paypro.nl/producten/Succesvol_Uw_Huis_Verkopen/457/14535" target="_blank" rel="noopener noreferrer" class="bg-accent-500 hover:bg-accent-600 text-white px-6 py-3 rounded-lg font-semibold">Download eBook</a>
+      </div>
+
+      <p class="text-sm text-gray-500">Tip: controleer de URL of gebruik de navigatie bovenaan de pagina.</p>
     </div>
   </main>
 </body>
