--- a/index.html
+++ b/index.html
@@ -238,7 +238,13 @@
         </div>
     </section>
 
-    <div id="app-content"></div>
+    <!-- Anchor targets rendered server-side for accessibility and static analyzers -->
+    <section id="voordelen"></section>
+    <section id="proces"></section>
+    <section id="testimonials"></section>
+    <section id="lokale-tips"></section>
+    <section id="faq"></section>
+    <section id="download"></section>
 
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
