SEO/UX: fix heading hierarchy, add static content, enhance 404

--- a/index.html
+++ b/index.html
@@ -223,10 +223,25 @@
         </div>
     </section>
 
+    <!-- Static Content Section (improves word count and readability without JS) -->
+    <section class="bg-white py-16">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <h2 class="text-3xl lg:text-4xl font-bold text-gray-900 mb-6">Waarom dit eBook?</h2>
+            <div class="space-y-4 text-gray-700 text-lg leading-relaxed">
+                <p>Zelf je huis verkopen in Nederland kan. Met de juiste voorbereiding, een duidelijke strategie en heldere communicatie kom je ver. Dit eBook geeft je een praktisch stappenplan met voorbeelden die je direct kunt toepassen. Geen vakjargon. Korte hoofdstukken. Concreet en resultaatgericht.</p>
+                <p>Je leert hoe je een realistische vraagprijs bepaalt, je woning presenteert voor foto’s en bezichtigingen, en hoe je sterke advertentieteksten schrijft. Ook behandelen we onderhandelen, juridische aandachtspunten en het plannen van bezichtigingen. Alles is afgestemd op de Nederlandse woningmarkt.</p>
+                <p>Of je nu zonder makelaar verkoopt of gewoon meer grip wilt wanneer je wél met een makelaar werkt: dit eBook helpt je betere keuzes te maken en fouten te voorkomen. Zo vergroot je de kans op een snelle verkoop tegen een goede prijs.</p>
+                <div>
+                    <a href="https://www.paypro.nl/producten/Succesvol_Uw_Huis_Verkopen/457/14535" target="_blank" rel="noopener noreferrer" class="inline-block bg-accent-500 hover:bg-accent-600 text-white px-6 py-3 rounded-lg font-semibold transition-colors">Download het eBook</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Local SEO Regions -->
     <section class="bg-gray-50 py-8">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-            <h3 class="font-bold mb-4">Regio's waar wij actief zijn:</h3>
+            <h2 class="text-2xl font-bold mb-4">Regio's waar wij actief zijn:</h2>
             <div class="flex flex-wrap justify-center gap-3">
                 <span class="bg-white px-4 py-2 rounded-full shadow-sm">Amsterdam</span>
                 <span class="bg-white px-4 py-2 rounded-full shadow-sm">Rotterdam</span>
