Readability: split hero subtitle and break long paragraph into short, scannable paragraphs

--- a/index.html
+++ b/index.html
@@ -138,12 +138,14 @@
                         Verkoop Uw Huis <span class="text-accent-500">Succesvol</span> in Nederland
                     </h1>
                     <p class="text-xl lg:text-2xl mb-8 text-blue-100">
-                        Leer bewezen technieken om uw verkoopprijs te maximaliseren en uw huis sneller te verkopen - speciaal voor de Nederlandse woningmarkt
+                        Leer bewezen technieken om uw verkoopprijs te maximaliseren en uw huis sneller te verkopen. Speciaal voor de Nederlandse woningmarkt.
                     </p>
                     <div class="bg-white/10 rounded-lg p-4 mb-8">
-                        <p class="text-blue-50 text-base leading-relaxed">
-                            Dit praktische eBook helpt particuliere verkopers in Nederland hun woning zelfstandig te verkopen. U krijgt een duidelijk stappenplan, checklists, voorbeeldteksten en strategieën voor presentatie, prijsbepaling, marketing en onderhandelen. Geen vakjargon: korte hoofdstukken, heldere voorbeelden en direct toepasbare tips. Ideaal als u zonder makelaar wilt verkopen, maar ook nuttig wanneer u wél met een makelaar werkt en beter wilt sturen op resultaat. Inclusief lokale aandachtspunten voor steden als Amsterdam, Rotterdam, Den Haag, Utrecht, Eindhoven en Groningen. Start vandaag nog en voorkom veelgemaakte fouten die u duizenden euro’s kunnen kosten.
-                        </p>
+                        <div class="space-y-3 text-blue-50 text-base leading-relaxed">
+                            <p>Dit praktische eBook helpt particuliere verkopers hun woning zelfstandig te verkopen.</p>
+                            <p>U krijgt een duidelijk stappenplan, checklists en voorbeeldteksten voor presentatie, prijsbepaling, marketing en onderhandelen.</p>
+                            <p>Geen vakjargon: korte hoofdstukken met heldere voorbeelden en direct toepasbare tips. Ook nuttig wanneer u met een makelaar werkt en meer grip wilt. Inclusief lokale aandachtspunten voor Amsterdam, Rotterdam, Den Haag, Utrecht, Eindhoven en Groningen. Start vandaag en voorkom fouten die u veel geld kunnen kosten.</p>
+                        </div>
                     </div>
                     <div class="mb-8">
                         <ul class="space-y-3 text-lg">
