--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
                     <span class="inline-flex items-center gap-2 bg-white/10 border border-white/20 text-white text-xs font-semibold px-3 py-1 rounded-full mb-4 backdrop-blur">
                         ⭐ Populair bij particuliere verkopers
                     </span>
-                    <h1 class="text-4xl lg:text-6xl font-bold leading-tight mb-6">
+                    <h1 class="text-4xl lg:text-6xl font-bold leading-tight mb-6 text-shadow">
                         Verkoop Uw Huis <span class="text-accent-500">Succesvol</span> in Nederland
                     </h1>
-                    <p class="text-xl lg:text-2xl mb-8 text-blue-100">
+                    <p class="text-xl lg:text-2xl mb-8 text-white">
                         Leer bewezen technieken om uw verkoopprijs te maximaliseren en uw huis sneller te verkopen. Speciaal voor de Nederlandse woningmarkt.
                     </p>
-                    <div class="bg-white/10 rounded-lg p-4 mb-8">
-                        <div class="space-y-3 text-blue-50 text-base leading-relaxed">
+                    <div class="bg-black/50 backdrop-blur-sm border border-white/20 rounded-lg p-5 mb-8">
+                        <div class="space-y-3 text-white text-base leading-relaxed md:leading-loose max-w-prose">
                             <p>Dit praktische eBook helpt particuliere verkopers hun woning zelfstandig te verkopen.</p>
                             <p>U krijgt een duidelijk stappenplan, checklists en voorbeeldteksten voor presentatie, prijsbepaling, marketing en onderhandelen.</p>
                             <p>Geen vakjargon: korte hoofdstukken met heldere voorbeelden en direct toepasbare tips. Ook nuttig wanneer u met een makelaar werkt en meer grip wilt. Inclusief lokale aandachtspunten voor Amsterdam, Rotterdam, Den Haag, Utrecht, Eindhoven en Groningen. Start vandaag en voorkom fouten die u veel geld kunnen kosten.</p>
