--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
                     <h1 class="text-4xl lg:text-6xl font-bold leading-tight mb-6 text-shadow">
                         Verkoop Uw Huis <span class="text-accent-500">Succesvol</span> in Nederland
                     </h1>
-                    <p class="text-xl lg:text-2xl mb-8 text-white">
+                    <p class="text-xl lg:text-2xl mb-8 text-white text-shadow-sm">
                         Leer bewezen technieken om uw verkoopprijs te maximaliseren en uw huis sneller te verkopen. Speciaal voor de Nederlandse woningmarkt.
                     </p>
-                    <div class="bg-black/50 backdrop-blur-sm border border-white/20 rounded-lg p-5 mb-8">
+                    <div class="bg-black/60 backdrop-blur-sm border border-white/20 rounded-lg p-5 mb-8">
                         <div class="space-y-3 text-white text-base leading-relaxed md:leading-loose max-w-prose">
                             <p>Dit praktische eBook helpt particuliere verkopers hun woning zelfstandig te verkopen.</p>
                             <p>U krijgt een duidelijk stappenplan, checklists en voorbeeldteksten voor presentatie, prijsbepaling, marketing en onderhandelen.</p>
