--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
                     <span class="inline-flex items-center gap-2 bg-white/10 border border-white/20 text-white text-xs font-semibold px-3 py-1 rounded-full mb-4 backdrop-blur">
                         ⭐ Populair bij particuliere verkopers
                     </span>
-                    <h1 class="text-4xl lg:text-6xl font-bold leading-tight mb-6 text-shadow">
+                    <h1 class="text-4xl lg:text-6xl font-bold leading-tight mb-6 text-shadow-strong">
                         Verkoop Uw Huis <span class="text-accent-500">Succesvol</span> in Nederland
                     </h1>
-                    <p class="text-xl lg:text-2xl mb-8 text-white text-shadow-sm">
+                    <p class="text-xl lg:text-2xl mb-8 text-white text-shadow">
                         Leer bewezen technieken om uw verkoopprijs te maximaliseren en uw huis sneller te verkopen. Speciaal voor de Nederlandse woningmarkt.
                     </p>
                     <div class="bg-black/60 backdrop-blur-sm border border-white/20 rounded-lg p-5 mb-8">
