--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <meta name="twitter:description" content="Leer bewezen technieken om uw verkoopprijs te maximaliseren en sneller te verkopen. Download het complete stappenplan.">
     <meta name="twitter:image" content="https://images.unsplash.com/photo-1560518883-ce09059eeffa?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80">
     <meta name="theme-color" content="#1e40af">
+    <link rel="preload" as="image" href="https://images.unsplash.com/photo-1560518883-ce09059eeffa?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80">
     
     <!-- Tailwind Config must be defined before loading the CDN script -->
     <script>
