SEO: add sitemap link tag for scanners; readability improvements

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <link rel="canonical" href="https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/" />
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/sitemap.xml">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
@@ -147,9 +148,13 @@
                     </p>
                     <div class="bg-black/60 backdrop-blur-sm border border-white/20 rounded-lg p-5 mb-8">
                         <div class="space-y-3 text-white text-base leading-relaxed md:leading-loose max-w-prose">
-                            <p>Dit praktische eBook helpt particuliere verkopers hun woning zelfstandig te verkopen.</p>
-                            <p>U krijgt een duidelijk stappenplan, checklists en voorbeeldteksten voor presentatie, prijsbepaling, marketing en onderhandelen.</p>
-                            <p>Geen vakjargon: korte hoofdstukken met heldere voorbeelden en direct toepasbare tips. Ook nuttig wanneer u met een makelaar werkt en meer grip wilt. Inclusief lokale aandachtspunten voor Amsterdam, Rotterdam, Den Haag, Utrecht, Eindhoven en Groningen. Start vandaag en voorkom fouten die u veel geld kunnen kosten.</p>
+                            <p>Dit eBook helpt particuliere verkopers hun woning zelf te verkopen.</p>
+                            <p>U krijgt een helder stappenplan met checklists en voorbeeldteksten.</p>
+                            <p>We behandelen presentatie, prijs, marketing en onderhandelen.</p>
+                            <p>Geen vakjargon. Korte hoofdstukken. Direct toepasbare tips.</p>
+                            <p>Ook handig met een makelaar: meer grip en betere keuzes.</p>
+                            <p>Met lokale tips voor Amsterdam, Rotterdam, Den Haag, Utrecht, Eindhoven en Groningen.</p>
+                            <p>Start vandaag. Voorkom fouten die geld kosten.</p>
                         </div>
                     </div>
                     <div class="mb-8">
@@ -234,11 +239,16 @@
     <section class="bg-white py-16">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <h2 class="text-3xl lg:text-4xl font-bold text-gray-900 mb-6">Waarom dit eBook?</h2>
-            <div class="space-y-4 text-gray-700 text-lg leading-relaxed">
-                <p>Zelf je huis verkopen in Nederland kan. Met de juiste voorbereiding, een duidelijke strategie en heldere communicatie kom je ver. Dit eBook geeft je een praktisch stappenplan met voorbeelden die je direct kunt toepassen. Geen vakjargon. Korte hoofdstukken. Concreet en resultaatgericht.</p>
-                <p>Je leert hoe je een realistische vraagprijs bepaalt, je woning presenteert voor foto’s en bezichtigingen, en hoe je sterke advertentieteksten schrijft. Ook behandelen we onderhandelen, juridische aandachtspunten en het plannen van bezichtigingen. Alles is afgestemd op de Nederlandse woningmarkt.</p>
-                <p>Of je nu zonder makelaar verkoopt of gewoon meer grip wilt wanneer je wél met een makelaar werkt: dit eBook helpt je betere keuzes te maken en fouten te voorkomen. Zo vergroot je de kans op een snelle verkoop tegen een goede prijs.</p>
-                <div>
+            <div class="text-gray-700 text-lg leading-relaxed">
+                <ul class="list-disc pl-6 space-y-2">
+                    <li>Verkoop zelf: duidelijke, korte stappen voor elk onderdeel.</li>
+                    <li>Heldere checklists en voorbeeldteksten die u direct kunt gebruiken.</li>
+                    <li>Presentatie, prijs, marketing en onderhandelen eenvoudig uitgelegd.</li>
+                    <li>Geen vakjargon. Korte hoofdstukken. Concreet en resultaatgericht.</li>
+                    <li>Werkt zonder makelaar en mét makelaar voor extra grip.</li>
+                    <li>Lokale aandachtspunten voor grote Nederlandse steden.</li>
+                </ul>
+                <div class="mt-5">
                     <a href="https://www.paypro.nl/producten/Succesvol_Uw_Huis_Verkopen/457/14535" target="_blank" rel="noopener noreferrer" class="inline-block bg-accent-500 hover:bg-accent-600 text-white px-6 py-3 rounded-lg font-semibold transition-colors" aria-label="Download het eBook via PayPro">Download het eBook</a>
                 </div>
             </div>
