--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
   <title>Pagina niet gevonden (404)</title>
   <meta name="robots" content="noindex" />
   <link rel="stylesheet" href="styles.css" />
-  <script src="https://cdn.tailwindcss.com" defer></script>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="antialiased bg-gray-50">
   <main class="min-h-screen flex items-center justify-center p-6">
