Perf: defer Tailwind; Content: add process steps and FAQ for SEO/readability

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         }
     </script>
     <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com" defer></script>
     
     <!-- Google Fonts & External Preconnects -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -262,6 +262,53 @@
                 <div class="mt-5">
                     <a href="https://www.paypro.nl/producten/Succesvol_Uw_Huis_Verkopen/457/14535" target="_blank" rel="noopener noreferrer" class="inline-block bg-accent-500 hover:bg-accent-600 text-white px-6 py-3 rounded-lg font-semibold transition-colors" aria-label="Download het eBook via PayPro">Download het eBook</a>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Hoe het werkt / Proces -->
+    <section class="bg-gray-50 py-16" aria-labelledby="proces-heading">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <h2 id="proces-heading" class="text-3xl lg:text-4xl font-bold text-gray-900 mb-6">Hoe het werkt</h2>
+            <ol class="list-decimal pl-6 space-y-3 text-gray-700 text-lg leading-relaxed">
+                <li><strong>Voorbereiden:</strong> maak schoon. Ruim op. Repareer kleine gebreken.</li>
+                <li><strong>Prijs bepalen:</strong> vergelijk met recente verkopen in uw buurt. Kies een realistische vraagprijs.</li>
+                <li><strong>Presentatie:</strong> maak goede foto’s. Schrijf een heldere advertentietekst. Zet sterke punten voorop.</li>
+                <li><strong>Adverteren:</strong> plaats uw woning op grote platforms. Deel op socials. Reageer snel op vragen.</li>
+                <li><strong>Bezichtigingen:</strong> plan slim. Geef duidelijke rondleidingen. Noteer vragen en afspraken.</li>
+                <li><strong>Onderhandelen:</strong> bepaal uw minimum. Blijf vriendelijk en kort. Leg afspraken vast in een mail.</li>
+                <li><strong>Koopcontract:</strong> gebruik een standaard model. Controleer gegevens. Plan de overdracht bij de notaris.</li>
+            </ol>
+            <div class="mt-6">
+                <a href="https://www.paypro.nl/producten/Succesvol_Uw_Huis_Verkopen/457/14535" target="_blank" rel="noopener noreferrer" class="inline-block bg-accent-500 hover:bg-accent-600 text-white px-6 py-3 rounded-lg font-semibold transition-colors" aria-label="Download het eBook met het volledige stappenplan via PayPro">Download het volledige stappenplan</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- FAQ -->
+    <section class="bg-white py-16" aria-labelledby="faq-heading">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <h2 id="faq-heading" class="text-3xl lg:text-4xl font-bold text-gray-900 mb-6">Veelgestelde vragen</h2>
+            <div class="space-y-4 text-gray-800">
+                <details class="p-4 bg-gray-50 rounded-lg border border-gray-200">
+                    <summary class="font-semibold cursor-pointer">Kan ik zelf mijn huis verkopen?</summary>
+                    <p class="mt-2">Ja. Met een goed plan, duidelijke advertentie en snelle reacties kan dit prima. Het eBook geeft u alle stappen.</p>
+                </details>
+                <details class="p-4 bg-gray-50 rounded-lg border border-gray-200">
+                    <summary class="font-semibold cursor-pointer">Hoe bepaal ik een goede vraagprijs?</summary>
+                    <p class="mt-2">Kijk naar recente verkopen in uw buurt. Let op staat, ligging en woonoppervlak. Kies een prijs die past bij de markt.</p>
+                </details>
+                <details class="p-4 bg-gray-50 rounded-lg border border-gray-200">
+                    <summary class="font-semibold cursor-pointer">Heb ik een makelaar nodig?</summary>
+                    <p class="mt-2">Niet altijd. Veel verkopers doen het zelf. Het eBook helpt u met voorbereiding, onderhandelen en documenten.</p>
+                </details>
+                <details class="p-4 bg-gray-50 rounded-lg border border-gray-200">
+                    <summary class="font-semibold cursor-pointer">Wat als ik weinig tijd heb?</summary>
+                    <p class="mt-2">Plan vaste blokken voor bezichtigingen en communicatie. Gebruik de checklists. Zo werkt u snel en gestructureerd.</p>
+                </details>
+            </div>
+            <div class="mt-6">
+                <a href="https://www.paypro.nl/producten/Succesvol_Uw_Huis_Verkopen/457/14535" target="_blank" rel="noopener noreferrer" class="inline-block bg-primary-600 hover:bg-primary-700 text-white px-6 py-3 rounded-lg font-semibold transition-colors" aria-label="Bestel het eBook via PayPro">Bestel het eBook</a>
             </div>
         </div>
     </section>
