SEO: add Google Search Console verification tag

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <meta property="og:image:height" content="630">
     <link rel="canonical" href="https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/" />
     <link rel="sitemap" type="application/xml" title="Sitemap" href="https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/sitemap.xml">
+    <meta name="google-site-verification" content="ugGatQWq23TWi9ZyLBbrqMxBdg20of--4CobSoJr7Qs" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
