Fix: doctype quirks mode, H1 deprecated API, add security headers

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<script type="application/ld+json"> { "@context": "https://schema.org", "@type": "HowTo", "name": "Huis verkopen zonder makelaar", "description": "Volledige Nederlandstalige gids over hoe je zelfstandig je huis verkoopt, inclusief juridische stappen, bespaartips en platformadvies.", "image": "https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/cover.jpg", "author": { "@type": "Person", "name": "BENRGY" }, "publisher": { "@type": "Organization", "name": "BENRGY", "url": "https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/" }, "award": "Best Dutch DIY Home Selling Guide 2025", "inLanguage": "nl-NL", "mainEntity": { "@type": "Question", "name": "Hoe verkoop ik mijn huis zonder makelaar?", "acceptedAnswer": { "@type": "Answer", "text": "Zelf je huis verkopen in Nederland en België is mogelijk en legaal. Volg ons praktische stappenplan: bepaal een realistische vraagprijs, zorg voor een geldig energielabel, regel een verkoopakte via de notaris, en maak gebruik van online verkoopplatforms voor optimale zichtbaarheid." } }, "step": [ { "@type": "HowToStep", "name": "Vraagprijs bepalen", "text": "Gebruik online tools en vergelijkbare woningen in jouw regio om een concurrerende vraagprijs vast te stellen." }, { "@type": "HowToStep", "name": "Documentatie in orde maken", "text": "Zorg voor een energielabel, eigendomsbewijs, kadastrale gegevens en een lijst van zaken." }, { "@type": "HowToStep", "name": "Advertentie en presentatie", "text": "Maak duidelijke foto's, schrijf een overtuigende tekst en plaats deze op JAAP, Marktplaats en relevante sociale media." }, { "@type": "HowToStep", "name": "Onderhandeling en afronding", "text": "Onderhandel direct met geïnteresseerden, leg afspraken vast en laat de koopakte opstellen door een notaris." } ] } </script>
-
 <!DOCTYPE html>
 <html lang="nl">
 <head>
@@ -76,6 +74,31 @@
     <!-- JSON-LD Schema -->
     <script type="application/ld+json">
     [
+      {
+        "@context": "https://schema.org",
+        "@type": "HowTo",
+        "name": "Huis verkopen zonder makelaar",
+        "description": "Volledige Nederlandstalige gids over hoe je zelfstandig je huis verkoopt, inclusief juridische stappen, bespaartips en platformadvies.",
+        "image": "https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/cover.jpg",
+        "author": { "@type": "Person", "name": "BENRGY" },
+        "publisher": { "@type": "Organization", "name": "BENRGY", "url": "https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/" },
+        "award": "Best Dutch DIY Home Selling Guide 2025",
+        "inLanguage": "nl-NL",
+        "mainEntity": {
+          "@type": "Question",
+          "name": "Hoe verkoop ik mijn huis zonder makelaar?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Zelf je huis verkopen in Nederland en België is mogelijk en legaal. Volg ons praktische stappenplan: bepaal een realistische vraagprijs, zorg voor een geldig energielabel, regel een verkoopakte via de notaris, en maak gebruik van online verkoopplatforms voor optimale zichtbaarheid."
+          }
+        },
+        "step": [
+          { "@type": "HowToStep", "name": "Vraagprijs bepalen", "text": "Gebruik online tools en vergelijkbare woningen in jouw regio om een concurrerende vraagprijs vast te stellen." },
+          { "@type": "HowToStep", "name": "Documentatie in orde maken", "text": "Zorg voor een energielabel, eigendomsbewijs, kadastrale gegevens en een lijst van zaken." },
+          { "@type": "HowToStep", "name": "Advertentie en presentatie", "text": "Maak duidelijke foto's, schrijf een overtuigende tekst en plaats deze op JAAP, Marktplaats en relevante sociale media." },
+          { "@type": "HowToStep", "name": "Onderhandeling en afronding", "text": "Onderhandel direct met geïnteresseerden, leg afspraken vast en laat de koopakte opstellen door een notaris." }
+        ]
+      },
       {
         "@context": "https://schema.org",
         "@type": "WebSite",
