--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huis Verkopen Zonder Makelaar – Stappenplan & Tips (eBook)</title>
-    <meta name="description" content="Bewezen methodes om uw huis in Nederland snel te verkopen tegen maximale prijs. Download nu het complete stappenplan voor particuliere verkopers!">
+    <meta name="description" content="Huis verkopen zonder makelaar? Bewezen methodes om uw huis in Nederland snel te verkopen tegen maximale prijs. Download nu het complete stappenplan voor particuliere verkopers!">
     <meta name="keywords" content="huis verkopen zonder makelaar, stappenplan huis verkopen, woning verkopen tips, eBook huis verkopen, particulier huis verkopen">
     
     <!-- Favicon Package -->
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Succesvol Uw Huis Verkopen in Nederland | Expert Tips">
+    <meta property="og:title" content="Succesvol Uw Huis Verkopen zonder makelaar | Expert Tips">
     <meta property="og:description" content="Leer bewezen technieken om uw verkoopprijs te maximaliseren en uw huis sneller te verkopen.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/">
@@ -89,7 +89,7 @@
           "name": "Hoe verkoop ik mijn huis zonder makelaar?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Zelf je huis verkopen in Nederland en België is mogelijk en legaal. Volg ons praktische stappenplan: bepaal een realistische vraagprijs, zorg voor een geldig energielabel, regel een verkoopakte via de notaris, en maak gebruik van online verkoopplatforms voor optimale zichtbaarheid."
+            "text": "Zelf je huis verkopen zonder makelaar in Nederland en België is mogelijk en legaal. Volg ons praktische stappenplan: bepaal een realistische vraagprijs, zorg voor een geldig energielabel, regel een verkoopakte via de notaris, en maak gebruik van online verkoopplatforms voor optimale zichtbaarheid."
           }
         },
         "step": [
@@ -102,7 +102,7 @@
       {
         "@context": "https://schema.org",
         "@type": "WebSite",
-        "name": "Succesvol Uw Huis Verkopen",
+        "name": "Succesvol Uw Huis Verkopenzonder makelaar ",
         "url": "https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/",
         "inLanguage": "nl-NL",
         "potentialAction": {
@@ -121,7 +121,7 @@
         "@type": "Organization",
         "url": "https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/",
         "logo": "https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/logo.png",
-        "description": "Informatieve website met tips en strategieën voor het succesvol verkopen van woningen in Nederland.",
+        "description": "Informatieve website met tips en strategieën voor het succesvol verkopen van je eigen woning zonder makelaar in Nederland.",
         "areaServed": [
           "Amsterdam", "Rotterdam", "Den Haag", "Utrecht", "Eindhoven", "Groningen",
           "Tilburg", "Almere", "Nijmegen", "Haarlem"
