--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<meta name="google-site-verification" content="9s-Nz6cYJNBjdXhYzQdodRcCrC_Hpx7gSmEY9at0f-Q" />
 <!DOCTYPE html>
 <html lang="nl">
 <head>
