Update all URLs from GitHub Pages to Netlify domain (huisverkopenzondermakelaar.store)

--- a/wiki.html
+++ b/wiki.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wiki – Huis Verkopen Zonder Makelaar (Overzicht en Gids)</title>
   <meta name="description" content="Overzicht van alle wiki-onderwerpen rond succesvol uw huis verkopen zonder makelaar: stappenplan, checklists, voorbeeldteksten en veelgestelde vragen." />
-  <link rel="canonical" href="https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/wiki.html" />
+  <link rel="canonical" href="https://huisverkopenzondermakelaar.store/wiki.html" />
   <meta name="robots" content="index,follow" />
   <meta property="og:title" content="Wiki – Huis Verkopen Zonder Makelaar" />
   <meta property="og:description" content="Gestructureerd overzicht van onderwerpen: voorbereiding, presentatie, bezichtigingen, onderhandelen en overdracht." />
   <meta property="og:type" content="article" />
-  <meta property="og:url" content="https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/wiki.html" />
+  <meta property="og:url" content="https://huisverkopenzondermakelaar.store/wiki.html" />
   <meta name="twitter:card" content="summary" />
   <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.tailwindcss.com" defer></script>
