--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <meta property="og:title" content="Succesvol Uw Huis Verkopen zonder makelaar | Expert Tips">
     <meta property="og:description" content="Leer bewezen technieken om uw verkoopprijs te maximaliseren en uw huis sneller te verkopen.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/">
+    <meta property="og:url" content="https://huisverkopenzondermakelaar.store/">
     <meta property="og:image" content="https://images.unsplash.com/photo-1560518883-ce09059eeffa?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <link rel="canonical" href="https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/" />
-    <link rel="sitemap" type="application/xml" title="Sitemap" href="https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/sitemap.xml">
+    <link rel="canonical" href="https://huisverkopenzondermakelaar.store/" />
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="https://huisverkopenzondermakelaar.store/sitemap.xml">
     <meta name="google-site-verification" content="ugGatQWq23TWi9ZyLBbrqMxBdg20of--4CobSoJr7Qs" />
 
     <!-- Twitter Card -->
@@ -80,9 +80,9 @@
         "@type": "HowTo",
         "name": "Huis verkopen zonder makelaar",
         "description": "Volledige Nederlandstalige gids over hoe je zelfstandig je huis verkoopt, inclusief juridische stappen, bespaartips en platformadvies.",
-        "image": "https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/cover.jpg",
+        "image": "https://huisverkopenzondermakelaar.store/cover.jpg",
         "author": { "@type": "Person", "name": "BENRGY" },
-        "publisher": { "@type": "Organization", "name": "BENRGY", "url": "https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/" },
+        "publisher": { "@type": "Organization", "name": "BENRGY", "url": "https://huisverkopenzondermakelaar.store/" },
         "award": "Best Dutch DIY Home Selling Guide 2025",
         "inLanguage": "nl-NL",
         "mainEntity": {
@@ -104,24 +104,24 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "Succesvol Uw Huis Verkopenzonder makelaar ",
-        "url": "https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/",
+        "url": "https://huisverkopenzondermakelaar.store/",
         "inLanguage": "nl-NL",
         "potentialAction": {
           "@type": "SearchAction",
-          "target": "https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/?s={search_term_string}",
+          "target": "https://huisverkopenzondermakelaar.store/?s={search_term_string}",
           "query-input": "required name=search_term_string"
         },
         "publisher": {
           "@type": "Organization",
           "name": "Succesvol Uw Huis Verkopen",
-          "url": "https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/"
+          "url": "https://huisverkopenzondermakelaar.store/"
         }
       },
       {
         "@context": "https://schema.org",
         "@type": "Organization",
-        "url": "https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/",
-        "logo": "https://benrgy.github.io/huisverkopenzondermakelaarebook.nl/logo.png",
+        "url": "https://huisverkopenzondermakelaar.store/",
+        "logo": "https://huisverkopenzondermakelaar.store/logo.png",
         "description": "Informatieve website met tips en strategieën voor het succesvol verkopen van je eigen woning zonder makelaar in Nederland.",
         "areaServed": [
           "Amsterdam", "Rotterdam", "Den Haag", "Utrecht", "Eindhoven", "Groningen",
