Fix all navigation URLs: remove /huisverkopenzondermakelaarebook.nl/ paths

--- a/404.html
+++ b/404.html
@@ -15,11 +15,11 @@
       <p class="text-lg text-gray-600 mb-8">Deze pagina bestaat niet (meer). Gebruik de links hieronder om verder te gaan.</p>
 
       <div class="grid sm:grid-cols-2 gap-3 mb-8">
-        <a href="/huisverkopenzondermakelaarebook.nl/" class="bg-primary-600 hover:bg-primary-700 text-white px-6 py-3 rounded-lg font-semibold">Terug naar home</a>
-        <a href="/huisverkopenzondermakelaarebook.nl/#voordelen" class="bg-white border border-gray-200 hover:border-gray-300 text-gray-800 px-6 py-3 rounded-lg font-semibold">Voordelen</a>
-        <a href="/huisverkopenzondermakelaarebook.nl/#proces" class="bg-white border border-gray-200 hover:border-gray-300 text-gray-800 px-6 py-3 rounded-lg font-semibold">Hoe Het Werkt</a>
-        <a href="/huisverkopenzondermakelaarebook.nl/#testimonials" class="bg-white border border-gray-200 hover:border-gray-300 text-gray-800 px-6 py-3 rounded-lg font-semibold">Ervaringen</a>
-        <a href="/huisverkopenzondermakelaarebook.nl/#faq" class="bg-white border border-gray-200 hover:border-gray-300 text-gray-800 px-6 py-3 rounded-lg font-semibold">FAQ</a>
+        <a href="/" class="bg-primary-600 hover:bg-primary-700 text-white px-6 py-3 rounded-lg font-semibold">Terug naar home</a>
+        <a href="/#voordelen" class="bg-white border border-gray-200 hover:border-gray-300 text-gray-800 px-6 py-3 rounded-lg font-semibold">Voordelen</a>
+        <a href="/#proces" class="bg-white border border-gray-200 hover:border-gray-300 text-gray-800 px-6 py-3 rounded-lg font-semibold">Hoe Het Werkt</a>
+        <a href="/#testimonials" class="bg-white border border-gray-200 hover:border-gray-300 text-gray-800 px-6 py-3 rounded-lg font-semibold">Ervaringen</a>
+        <a href="/#faq" class="bg-white border border-gray-200 hover:border-gray-300 text-gray-800 px-6 py-3 rounded-lg font-semibold">FAQ</a>
         <a href="https://www.paypro.nl/producten/Succesvol_Uw_Huis_Verkopen/457/14535" target="_blank" rel="noopener noreferrer" class="bg-accent-500 hover:bg-accent-600 text-white px-6 py-3 rounded-lg font-semibold">Download eBook</a>
       </div>
 
