--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <a href="#proces" class="text-gray-700 hover:text-primary-600 transition-colors">Hoe Het Werkt</a>
                     <a href="#testimonials" class="text-gray-700 hover:text-primary-600 transition-colors">Ervaringen</a>
                     <a href="#faq" class="text-gray-700 hover:text-primary-600 transition-colors">FAQ</a>
-                    <a href="/huisverkopenzondermakelaarebook.nl/wiki.html" class="text-gray-700 hover:text-primary-600 transition-colors">Wiki</a>
+                    <a href="/wiki.html" class="text-gray-700 hover:text-primary-600 transition-colors">Wiki</a>
                 </div>
                 <a href="https://www.paypro.nl/producten/Succesvol_Uw_Huis_Verkopen/457/14535" target="_blank" rel="noopener noreferrer" class="bg-accent-500 hover:bg-accent-600 text-white px-6 py-2 rounded-lg font-semibold transition-colors" aria-label="Download het eBook via PayPro">
                     Download Nu
