--- a/wiki.html
+++ b/wiki.html
@@ -19,11 +19,11 @@
   <a href="#content" class="skip-link">Direct naar inhoud</a>
   <header class="bg-white border-b border-gray-200">
     <div class="max-w-5xl mx-auto px-4 py-4 flex items-center justify-between">
-      <a href="/huisverkopenzondermakelaarebook.nl/" class="font-extrabold text-xl text-gray-900">Succesvol Uw Huis Verkopen</a>
+      <a href="/" class="font-extrabold text-xl text-gray-900">Succesvol Uw Huis Verkopen</a>
       <nav class="space-x-4 text-sm">
-        <a class="hover:underline" href="/huisverkopenzondermakelaarebook.nl/">Home</a>
-        <a class="hover:underline" href="/huisverkopenzondermakelaarebook.nl/testimonials.html">Ervaringen</a>
-        <a class="hover:underline font-semibold text-primary-700" href="/huisverkopenzondermakelaarebook.nl/wiki.html" aria-current="page">Wiki</a>
+        <a class="hover:underline" href="/">Home</a>
+        <a class="hover:underline" href="/testimonials.html">Ervaringen</a>
+        <a class="hover:underline font-semibold text-primary-700" href="/wiki.html" aria-current="page">Wiki</a>
       </nav>
     </div>
   </header>
@@ -73,8 +73,8 @@
       <h2 class="text-xl font-bold mb-3">Bronnen en verdere verdieping</h2>
       <p class="text-gray-700 mb-3">Voor uitgebreide artikelen, sjablonen en voorbeeldteksten, bekijk ook onze aanvullende bronnen.</p>
       <ul class="list-disc pl-5 space-y-1 text-gray-700">
-        <li><a class="text-primary-700 hover:underline" href="/huisverkopenzondermakelaarebook.nl/README.md">Project README</a> – overzicht en uitgangspunten.</li>
-        <li><a class="text-primary-700 hover:underline" href="https://github.com/Benrgy/huisverkopenzondermakelaarebook.nl/wiki" rel="noopener noreferrer" target="_blank">GitHub Wiki</a> – verdiepende artikelen (extern).</li>
+        <li><a class="text-primary-700 hover:underline" href="/README.md">Project README</a> – overzicht en uitgangspunten.</li>
+        <li><a class="text-primary-700 hover:underline" href="https://github.com/Benrgy/wiki" rel="noopener noreferrer" target="_blank">GitHub Wiki</a> – verdiepende artikelen (extern).</li>
       </ul>
     </section>
 
@@ -87,9 +87,9 @@
     <div class="max-w-5xl mx-auto px-4 py-8 text-sm text-gray-600 flex flex-col sm:flex-row gap-2 sm:items-center sm:justify-between">
       <p>&copy; <span id="year"></span> Succesvol Uw Huis Verkopen. Alle rechten voorbehouden.</p>
       <nav class="space-x-3">
-        <a class="hover:underline" href="/huisverkopenzondermakelaarebook.nl/">Home</a>
-        <a class="hover:underline" href="/huisverkopenzondermakelaarebook.nl/testimonials.html">Ervaringen</a>
-        <a class="hover:underline" href="/huisverkopenzondermakelaarebook.nl/wiki.html">Wiki</a>
+        <a class="hover:underline" href="/">Home</a>
+        <a class="hover:underline" href="/testimonials.html">Ervaringen</a>
+        <a class="hover:underline" href="/wiki.html">Wiki</a>
       </nav>
     </div>
   </footer>
