--- a/wiki.html
+++ b/wiki.html
@@ -74,7 +74,7 @@
       <p class="text-gray-700 mb-3">Voor uitgebreide artikelen, sjablonen en voorbeeldteksten, bekijk ook onze aanvullende bronnen.</p>
       <ul class="list-disc pl-5 space-y-1 text-gray-700">
         <li><a class="text-primary-700 hover:underline" href="/README.md">Project README</a> – overzicht en uitgangspunten.</li>
-        <li><a class="text-primary-700 hover:underline" href="https://github.com/Benrgy/wiki" rel="noopener noreferrer" target="_blank">GitHub Wiki</a> – verdiepende artikelen (extern).</li>
+        <li><a class="text-primary-700 hover:underline" href="https://github.com/Benrgy/huisverkopenzondermakelaarebook.nl/wiki#huis-verkopen-zonder-makelaar-complete-gids-2025" rel="noopener noreferrer" target="_blank">GitHub Wiki</a> – verdiepende artikelen (extern).</li>
       </ul>
     </section>
 
